fix align, add autoprefix

--- a/src/assets/styles/_contact-form.scss
+++ b/src/assets/styles/_contact-form.scss
@@ -3,7 +3,6 @@
   max-width: 400px;
   width: 100%;
   position: relative;
-  top: 100px; 
   margin: auto;
 
   @media (#{$bp-larger-than-phablet}){
@@ -26,6 +25,7 @@
   }
 
   #contact {
+    width: 100%;
     padding: 25px;
   }
 
