--- a/src/assets/styles/_index.scss
+++ b/src/assets/styles/_index.scss
@@ -15,6 +15,9 @@ main {
   min-height: 500px;
   
   .form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     height: 80%;
   }
 
